# Heat_Microstructure

./: README.md
CA_Heat/: CA_functions.c  CA_heat.h  CMakeLists.txt  common_function.c  guassian_integration.c  heat_functions.c  main.c
CA_Heat/jupyterTest/: testSpiral-Copy1.ipynb
compare_analytical_FVM/: CMakeLists.txt  CubeClass.cpp  CubeClass.h  LaserClass.cpp  LaserClass.h  MaterialClass.cpp  MultiTrackLaserClass.cpp  MultiTrackLaserClass.h  PointGroupHistClass.cpp  PointGroupHistClass.h  PointHistClass.cpp  PointHistClass.h  TempClass.cpp  TempClass.h  TimeClass.cpp  TimeClass.h  constants.h  main.cpp  plot_equ_temp_conection_radiation.asv  plot_equ_temp_conection_radiation.m  plot_scan_track_history.ipynb
compare_analytical_FVM/.ipynb_checkpoints/: plot_point_therma_history-checkpoint.ipynb  plot_scan_track_history-checkpoint.ipynb
heat_adaptive_moltenTrack/: CMakeLists.txt  ComputingCase.cpp  ComputingCase.h  LaserClass.cpp  LaserClass.h  MaterialClass.h  MicroStructureOfCube.cpp  MicroStructureOfCube.h  MoltenPoolPoint.cpp  MoltenPoolPoint.h  MultiTrackLaserClass.cpp  MultiTrackLaserClass.h  ThermalHistOfCube.cpp  ThermalHistOfCube.h  ThermalHistOfCubeMoltenPoolTrack.cpp  ThermalHistOfCubeMoltenPoolTrack.h  constants.h  main.cpp  scan_multi_line_layer.ipynb
heat_adaptive_moltenTrack/.ipynb_checkpoints/: scan_multi_line_layer-checkpoint.ipynb
